# blockbrain-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
docs/: ADDING_A_TOOL.md  ARCHITECTURE.md  PROVIDERS.md
scripts/: dev-tunnel.sh
src/blockbrain_mcp/: __init__.py  auth.py  config.py  context.py  logging_setup.py  server.py  well_known.py
src/blockbrain_mcp/tools/: __init__.py  _base.py  read_url.py  research.py  web_search.py  whoami.py
tests/: conftest.py  test_auth.py  test_context.py  test_tools_read_url.py  test_tools_research.py  test_tools_web_search.py  test_tools_whoami.py  test_well_known.py
