[project]
name = "blockbrain-mcp"
version = "0.1.0"
description = "Blockbrain-compatible Python MCP Server with OAuth 2.1 — customer template"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Blockbrain" }]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.11",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "trafilatura>=2.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "respx>=0.22",
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
blockbrain-mcp = "blockbrain_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blockbrain_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length enforced by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
